# nerf

./: .gitignore  AGENTS.md  Cargo.toml
benches/: unwinding.rs
ci/: run_tests.sh
cli/: Cargo.toml
cli/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Flamegraph.tsx  Neighbors.tsx  Timeline.tsx  index.css  wire.ts
nerf-mac-capture/: Cargo.toml  build.rs
nerf-mac-capture/src/: lib.rs  mach_ipc.rs  preload.rs  proc_maps.rs  process_launcher.rs  recorder.rs  sample_sink.rs
nerf-mac-kperf/: Cargo.toml
nerf-mac-kperf-parse/: Cargo.toml
nerf-mac-kperf-parse/src/: image_scan.rs  jitdump_tail.rs  kernel_symbols.rs  lib.rs  offcpu.rs  parser.rs
nerf-mac-kperf-sys/: Cargo.toml
nerf-mac-kperf-sys/src/: error.rs  kdebug.rs  lib.rs  pmu_events.rs
nerf-mac-kperf/examples/: sample_pid.rs
nerf-mac-kperf/src/: bindings.rs  image_scan.rs  jitdump_tail.rs  kdebug.rs  lib.rs  libproc.rs  offcpu.rs  parser.rs  recorder.rs  shared_cache.rs
nerf-mac-preload/: Cargo.toml
nerf-mac-preload/src/: lib.rs
notes/: mac-roadmap.md  streams.md
nperf-demangle/: Cargo.toml
nperf-demangle/src/: lib.rs
nperf-live/: Cargo.toml
nperf-live-proto/src/: lib.rs
nperf-live/src/: aggregator.rs  binaries.rs  disassemble.rs  highlight.rs  lib.rs  source.rs
nperf-mac-shared-cache/: Cargo.toml
nperf-mac-shared-cache/src/: lib.rs  macos.rs
nperf-trinity-smoke/: Cargo.toml
nperf-trinity-smoke/src/: main.rs
nperfd/: Cargo.toml
nperfd-client/: Cargo.toml
nperfd-client/examples/: record_pid.rs
nperfd-client/src/: lib.rs
nperfd-proto/: Cargo.toml
nperfd-proto/src/: lib.rs
nperfd/src/: main.rs  session.rs
nwind/: Cargo.toml  build.rs
nwind/src/: address_space.rs  arm_extab.rs  binary.rs  captured.rs  debug_info_index.rs  dwarf.rs  dwarf_regs.rs  elf.rs  frame_descriptions.rs  lib.rs  local_unwinding.rs  macho.rs  range_map.rs  symbols.rs  types.rs  unwind_context.rs  utils.rs
nwind/src/arch/: aarch64.rs  amd64.rs  arm.rs  mips64.rs  mod.rs
src/: archive.rs  args.rs  cmd_annotate.rs  cmd_collate.rs  cmd_flamegraph.rs  cmd_metadata.rs  cmd_record.rs  cmd_record_mac.rs  cmd_setup_mac.rs  data_reader.rs  ingest_sink.rs  lib.rs  live_sink.rs  profiler.rs
src/perfetto/: writer.rs
stax-demangle/src/: lib.rs
stax-live/: Cargo.toml
stax-live-proto/: Cargo.toml
stax-live-proto/src/: lib.rs
stax-live/src/: aggregator.rs  binaries.rs  cfg.rs  classify.rs  disassemble.rs  highlight.rs  lib.rs  probe_match.rs  source.rs
stax-mac-app/: Justfile  project.yml
stax-mac-app/stax/: AppModel.swift  CFGLayout.swift  CallGraph.swift  ContentView.swift  DetailTabs.swift  FilterSidebar.swift  FunctionTable.swift  LanguageBadge.swift  MainPane.swift  ProfilerService.swift  StatusBar.swift
stax-mac-app/stax/Assets.xcassets/Languages/cplusplus.imageset/: Contents.json
stax-mac-app/stax/Assets.xcassets/Languages/objectivec.imageset/: Contents.json
stax-mac-capture/src/: lib.rs  sample_sink.rs
stax-mac-kperf-parse/src/: image_scan.rs  jitdump_tail.rs  kernel_symbols.rs  libproc.rs  offcpu.rs  parser.rs  pipeline.rs
stax-mac-kperf-sys/: Cargo.toml
stax-mac-kperf-sys/src/: bindings.rs  kdebug.rs  pmu_events.rs
stax-mac-shared-cache/: Cargo.toml
stax-mac-shared-cache/src/: macos.rs
stax-server/: Cargo.toml
stax-server/launchd/: eu.bearcove.stax-server.plist
stax-server/src/: main.rs
stax-shade/: Cargo.toml
stax-shade-proto/: Cargo.toml
stax-shade-proto/src/: lib.rs
stax-shade/src/: main.rs  probe.rs  walker.rs
stax-target-images/: Cargo.toml
stax-target-images/src/: dyld.rs  lib.rs  macho.rs
stax-unwind/: Cargo.toml
stax-unwind/src/: lib.rs
stax-vox-observe/: Cargo.toml
stax-vox-observe/src/: lib.rs
staxd/: Cargo.toml
staxd-client/: Cargo.toml
staxd-client/examples/: record_pid.rs
staxd-client/src/: lib.rs
staxd-proto/: Cargo.toml
staxd-proto/src/: lib.rs
staxd/launchd/: eu.bearcove.staxd.plist
staxd/src/: main.rs  probe.rs  session.rs  unwind.rs
thread-local-reentrant/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
