[package]
name = "stax-core"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"

[dependencies]
libc = "0.2"
log = "0.4"
tracing = "0.1"
facet = { version = "0.46" }
figue = { version = "2.0" }
eyre = "0.6"
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["executor"] }
stax-live-proto = { path = "stax-live-proto" }
stax-vox-observe = { path = "stax-vox-observe" }
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }

[target.'cfg(target_os = "macos")'.dependencies]
stax-mac-capture = { version = "0.1", path = "stax-mac-capture" }
staxd-client = { version = "0.1", path = "staxd-client" }
tokio = { version = "1", features = ["rt", "macros", "time"] }
mach2 = "0.4"

[dependencies.nwind]
version = "0.1"
path = "nwind"
features = ["log"]
default-features = false

[profile.release]
debug = 1

[features]
default = ["addr2line"]
addr2line = ["nwind/addr2line"]
debug-logs = ["nwind/debug-logs"]

[workspace]
members = [
  ".",
  "cli",
  "nwind",
  "proc-maps",
  "thread-local-reentrant",
  "stax-mac-capture",
  "stax-mac-kperf-sys",
  "stax-mac-kperf-parse",
  "stax-mac-shared-cache",
  "xtask",
  "stax-live",
  "stax-live-proto",
  "stax-vox-observe",
  "stax-unwind",
  "stax-server",
  "stax-shade",
  "stax-shade-proto",
  "stax-target-images",
  "stax-demangle",
  "staxd-proto",
  "staxd",
  "staxd-client",
]
