[package]
name = "stax"
version = "0.1.1"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
libc = "0.2"
eyre = "0.6"
facet = { version = "0.46" }
figue = { version = "2.0" }
stax-core = { path = "..", default-features = false }
stax-live-proto = { path = "../stax-live-proto" }
stax-vox-observe = { path = "../stax-vox-observe" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
tracing-oslog = "0.3"
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "sync"]

[features]
default = ["addr2line"]
addr2line = ["stax-core/addr2line"]
debug-logs = ["stax-core/debug-logs"]
