[package]
name = "nerf-mac-kperf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "macOS sampling backend for nerf using kperf/kdebug + PET. Orchestration crate that wires the privileged `nerf-mac-kperf-sys` half (kperf framework + kdebug sysctls) to the unprivileged `nerf-mac-kperf-parse` half (sample assembly, libproc, symbols), and exposes the high-level `record()` driver."

# References:
# - mperf (https://github.com/tmcgilchrist/mperf, MIT) for the PET driver.
# - ibireme's kpc_demo.c (public domain).
# - Apple's kperf/kperfdata private frameworks (loaded at runtime via dlopen).

[dependencies]
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
nerf-mac-kperf-sys = { version = "0.1", path = "../nerf-mac-kperf-sys" }
nerf-mac-kperf-parse = { version = "0.1", path = "../nerf-mac-kperf-parse" }
nerf-mac-capture = { version = "0.1", path = "../nerf-mac-capture" }
nperf-mac-shared-cache = { version = "0.1", path = "../nperf-mac-shared-cache" }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dev-dependencies]
env_logger = "0.11"

[[example]]
name = "sample_pid"
required-features = []
