[package]
name = "nperf-live"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[dependencies]
nperf-core = { path = ".." }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
eyre = "0.6"
tracing = "0.1"
parking_lot = "0.12"
facet = { version = "0.46", features = ["camino", "reflect"] }

vox = { git = "https://github.com/bearcove/vox", rev = "1bdc0aa4911765af726a4142ceb67812b0f6963d", features = ["transport-websocket"] }
