[package]
name = "nperf-live"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[dependencies]
nperf-core = { path = ".." }
nperf-live-proto = { path = "../nperf-live-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
eyre = "0.6"
tracing = "0.1"
parking_lot = "0.12"
arborium = { version = "2.16", features = ["lang-asm", "lang-rust", "lang-c", "lang-cpp"] }
addr2line = { version = "0.21", default-features = false, features = ["std"] }
yaxpeax-arch = { version = "0.3", default-features = false, features = ["std"] }
yaxpeax-x86 = { version = "2", default-features = false, features = ["std", "fmt"] }
yaxpeax-arm = { version = "0.4.0", default-features = false, features = ["std", "fmt"] }
object = { version = "0.39.1", default-features = false, features = ["std", "read_core", "elf", "macho", "compression"] }
memmap2 = "0.9"
rustc-demangle = "0.1"
cpp_demangle = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

vox = { git = "https://github.com/bearcove/vox", rev = "1bdc0aa4911765af726a4142ceb67812b0f6963d", features = ["transport-websocket"] }
