[package]
name = "nperfd-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Schema for the nperfd RPC. Tiny crate consumed by both the runtime (nperfd, the root daemon) and the client (nperf-live) so the wire stays the same on both sides. Mirrors the deliberately-thin design of nperf-live-proto."

[dependencies]
facet = { version = "0.46", features = ["camino", "reflect"] }
vox = { git = "https://github.com/bearcove/vox", rev = "1bdc0aa4911765af726a4142ceb67812b0f6963d", default-features = false, features = ["runtime"] }
