[package]
name = "stax-live"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[dependencies]
stax-live-proto = { path = "../stax-live-proto" }
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
parking_lot = "0.12"
memchr = "2"
arborium = { version = "2.16", features = ["lang-asm", "lang-rust", "lang-c", "lang-cpp"] }
addr2line = { version = "0.21", default-features = false, features = ["std"] }
yaxpeax-arch = { version = "0.3", default-features = false, features = ["std"] }
yaxpeax-x86 = { version = "2", default-features = false, features = ["std", "fmt"] }
yaxpeax-arm = { version = "0.4.0", default-features = false, features = ["std", "fmt"] }
object = { version = "0.39.1", default-features = false, features = ["std", "read_core", "elf", "macho", "compression", "archive"] }
memmap2 = "0.9"
stax-demangle = { path = "../stax-demangle" }

vox = { path = "/Users/amos/bearcove/vox/rust/vox" }

[target.'cfg(target_os = "macos")'.dependencies]
stax-mac-capture = { version = "0.1", path = "../stax-mac-capture" }
stax-mac-shared-cache = { version = "0.1", path = "../stax-mac-shared-cache" }
mach2 = "0.4"
