[package]
name = "stax-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Unprivileged long-running daemon: hosts the run registry, the live aggregator, the web UI, and the agent-facing RunControl service."

[dependencies]
stax-live-proto = { path = "../stax-live-proto" }
stax-live = { path = "../stax-live" }
metrix = { path = "../../metrix" }
stax-shade-proto = { path = "../stax-shade-proto" }
stax-vox-observe = { version = "0.1", path = "../stax-vox-observe" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
tracing-oslog = "0.3"
parking_lot = "0.12"

eyre = "0.6"
libc = "0.2"

vox = { path = "/Users/amos/bearcove/vox/rust/vox", features = ["transport-websocket"] }

[target.'cfg(target_os = "macos")'.dependencies]
stax-mac-shared-cache = { version = "0.1", path = "../stax-mac-shared-cache" }
stax-mac-capture = { version = "0.1", path = "../stax-mac-capture" }

[[bin]]
name = "stax-server"
path = "src/main.rs"
