[package]
name = "stax-shade"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Per-attachment companion process: holds the Mach task port and hosts target-side probe, peek/poke, and breakpoint work. Spawned by stax-server for the duration of a run."

[[bin]]
name = "stax-shade"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = "0.4"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
tracing-oslog = "0.3"
eyre = "0.6"

facet = { version = "0.46" }
figue = { version = "2.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
stax-shade-proto = { path = "../stax-shade-proto" }
stax-core = { path = "..", default-features = false }
stax-mac-capture = { path = "../stax-mac-capture" }
stax-live-proto = { path = "../stax-live-proto" }
stax-target-images = { path = "../stax-target-images" }
metrix = { path = "../../metrix" }
stax-vox-observe = { path = "../stax-vox-observe" }
staxd-client = { path = "../staxd-client" }
nwind = { path = "../nwind", default-features = false, features = ["log"] }
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }
