[package]
name = "stax-vox-observe"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Shared Vox runtime observer logging for stax components."

[dependencies]
metrix = { path = "../../metrix" }
tokio = { version = "1", features = ["rt", "signal"] }
tracing = "0.1"
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }
