[package]
name = "staxd-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Client-side driver for the staxd RPC. Connects to the root daemon over a vox local socket, asks it to record a target pid, receives the streaming kdebug records, and runs them through the existing stax-mac-kperf-parse parser + libproc-based image / thread enumeration. Output goes to whatever `SampleSink` the caller provides — same trait the in-process recorder hands events to, so live UI / archive sinks plug in unchanged."

[target.'cfg(target_os = "macos")'.dependencies]
staxd-proto = { path = "../staxd-proto" }
stax-mac-kperf-sys = { version = "0.1", path = "../stax-mac-kperf-sys" }
stax-mac-kperf-parse = { version = "0.1", path = "../stax-mac-kperf-parse" }
stax-mac-capture = { version = "0.1", path = "../stax-mac-capture" }
stax-mac-shared-cache = { version = "0.1", path = "../stax-mac-shared-cache" }
stax-telemetry = { path = "../stax-telemetry" }
stax-vox-observe = { version = "0.1", path = "../stax-vox-observe" }
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
log = "0.4"
tracing = "0.1"
thiserror = "2"
flume = "0.11"
mach2 = "0.4"

[target.'cfg(target_os = "macos")'.dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"], default-features = false }

[[example]]

name = "record_pid"
