[package]
name = "staxd-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Schema for the staxd RPC. Tiny crate consumed by both the runtime (staxd, the root daemon) and the client (stax-live) so the wire stays the same on both sides. Mirrors the deliberately-thin design of stax-live-proto."

[dependencies]
facet = { version = "0.46", features = ["camino", "reflect"] }
stax-mac-kperf-sys = { version = "0.1", path = "../stax-mac-kperf-sys" }
vox = { path = "/Users/amos/bearcove/vox/rust/vox", default-features = false, features = ["runtime"] }
