[package]
name = "staxd"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Root daemon for stax. Owns the kperf + kdebug + kpc surface, validates per-connection authorisation, and streams raw KdBuf records to clients over a vox local socket. Designed to run under launchd as a LaunchDaemon; one active recording session at a time (kperf is single-owner globally)."

[[bin]]
name = "staxd"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
staxd-proto = { path = "../staxd-proto" }
stax-mac-kperf-sys = { version = "0.1", path = "../stax-mac-kperf-sys" }
stax-telemetry = { path = "../stax-telemetry" }
stax-vox-observe = { version = "0.1", path = "../stax-vox-observe" }
vox = { path = "/Users/amos/bearcove/vox/rust/vox" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
tracing-oslog = "0.3"
libc = "0.2"
mach2 = "0.4"

eyre = "0.6"
