[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false
description = "Dev-only entrypoints (cargo xtask install, ...)."

[dependencies]
nperf-live-proto = { path = "../nperf-live-proto" }
vox-codegen = { git = "https://github.com/bearcove/vox", rev = "1bdc0aa4911765af726a4142ceb67812b0f6963d" }
arborium-theme = "2.16"
