[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false
description = "Dev-only entrypoints (cargo xtask install, ...)."

[dependencies]
stax-live-proto = { path = "../stax-live-proto" }
vox-codegen = { path = "/Users/amos/bearcove/vox/rust/vox-codegen" }
libc = "0.2"
